ansible/ansible_practica2/roles/first_app/templates/first_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-volumes
  namespace: webapp-volumes
  labels:
    app: webapp-volumes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-volumes
  template:
    metadata:
      labels:
        app: webapp-volumes
    spec:
      securityContext:
        runAsUser: 0
        fsGroup: 0
      containers:
      - name: webapp-volumes
        image: jupyter/datascience-notebook:latest
        ports:
        - containerPort: 8888
        command:
            - /bin/bash
            - -c
            - |
              start.sh jupyter lab --LabApp.token='password' --LabApp.ip='0.0.0.0' --LabApp.allow_root=True
        volumeMounts:
        - name: site-pvc
          mountPath: /home/root
      volumes:
      - name: site-pvc
        persistentVolumeClaim:
          claimName: nfs-pvc
---
apiVersion: v1
kind: Service
metadata:
    name: volumes-service
    namespace: webapp-volumes
spec:
    selector:
      app: webapp-volumes
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8888
